<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" formatted="true" translatable="true">my money management</string>
    <string name="iyad" translatable="true">iyad</string>
    <string name="loading" translatable="true">loading..</string>
    <string name="entry">new restriction</string>
    <string name="adduser">add user</string>
    <string name="no_selection">non-selection</string>
    <string name="addo" translatable="true">add new restriction</string>
    <string name="customer">customer</string>
    <string name="sure">are you sure ?</string>
    <string name="cut">currency cut</string>
    <string name="sendcenter">sender center</string>
    <string name="recievecenter">receiver center</string>
    <string name="searchuser">search user</string>
    <string name="tox">to</string>
    <string name="fromx">from</string>
    <string name="adderprice">addition count</string>
    <string name="for_on">for | on</string>
    <string name="fullname">fullname</string>
    <string name="mizan">balance:</string>
    <string name="rename">change description</string>
    <string name="end">loading ended</string>
    <string name="connected">connected</string>
    <string name="title_dynamicfeature">Module Title</string>
    <string name="p">count</string>
    <string name="reset">forgot password</string>
    <string name="register">register</string>
    <string name="dummy_content">h</string>
    <string name="dummy_button">butt</string>
    <string name="rego">register</string>
    <string name="passo">password</string>
    <string name="eadd">email</string>
    <string name="onus"> to - on us</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="select_user">please select a user</string>
    <string name="profanddeprof">Profits and losses</string>
    <string name="translate_profits">translate profits</string>
    <string name="u_r_not_connected">not connected</string>
    <string name="adder_to_waiting_list">warning!!!!!\n Added to waiting list</string>
    <string name="cant_cut_without_internet">cannot cut without internet</string>
    <string name="cant_add_without_internet">cannot add without internet</string>
    <string name="no_internet">no internet connection</string>
    <string name="warning">warning!!!!!!</string>
    <string name="euro">europe euro</string>
    <string name="dolar">us dolar</string>
    <string name="tl">turkish lira</string>
    <string name="updater">update</string>
    <string name="print_user_info">print user informations</string>
    <string name="boxes">boxes</string>
    <string name="currencies_management">currencies management</string>
    <string name="logout">logout</string>
    <string name="restrictions">restrictions</string>
    <string name="profits">profits</string>
    <string name="currency">currency</string>
    <string name="delivery_fees">delivery fees</string>
    <string name="notice">notice</string>
    <string name="add">add</string>
    <string name="count">count</string>
    <string name="export_fees">export fees</string>
    <string name="cut_price">cut price</string>
    <string name="docut">cut</string>
    <string name="Valuation_Price">Valuation Price</string>
    <string name="Coefficient">Coefficient</string>
    <string name="Currency_Symbol">Currency Symbol</string>
    <string name="id">id</string>
    <string name="login">login</string>
    <string name="balance_matching_for_mr">balance matching for mr</string>
    <string name="evaluated_balance">evaluated balance</string>
    <string name="total">total</string>
    <string name="from_date">from date</string>
    <string name="to_date">to date</string>
    <string name="search">search</string>
    <string name="take_screenshot">take screenshot</string>
    <string name="copy_to_clipboard">copy to clip</string>
    <string name="add_plus_count">add plus count</string>
    <string name="box_id">box id</string>
    <string name="opening_credit">Opening credit</string>
    <string name="for_it">for it</string>
    <string name="on_it">on it</string>
    <string name="primary">primary</string>
    <string name="secondary">secondary</string>
    <string name="save">save</string>
    <string name="username">username</string>
    <string name="cur_name">currency name</string>
    <string name="color">currency color</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="key">key</string>
    <string name="email_sent">email sent</string>
    <string name="signed_in">signedIn</string>
    <string name="no_user">not found user</string>
    <string name="email_not_verified">email not verified</string>
    <string name="updated">updated done</string>
    <string name="deleted">deleted done</string>
    <string name="operator">process</string>
    <string name="choose_color">choose color</string>
    <string name="multiply">multiply</string>
    <string name="divide">divide</string>
    <string name="added">was added</string>
    <string name="transform_profits">deportation profits</string>
    <string name="no_thing_selected">no thing selected</string>
    <string name="edit_currency">edit currency</string>
    <string name="delete">delete</string>
    <string name="retype">change box type</string>
</resources>