<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur_name"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/cur_name"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Currency_Symbol"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/codeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalCode"
            android:hint="@string/Currency_Symbol"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Coefficient"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/operatorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Valuation_Price"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/evaluationPriceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/Valuation_Price"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/colorPickerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:backgroundTint="@android:color/transparent"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/saveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancelButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>