<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addcur"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/fab_add"
            app:layout_constraintBottom_toBottomOf="@+id/currrec"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:weightSum="8"
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:background="@drawable/radiusxx"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/saar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/Valuation_Price" />

            <TextView
                android:background="@drawable/radiusxx"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/moaaml"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/Coefficient" />

            <TextView
                android:background="@drawable/radiusxx"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/rmz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Currency_Symbol" />

            <TextView
                android:background="@drawable/radiusxx"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/asm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/cur_name" />

            <TextView
                android:background="@drawable/radiusxx"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/rqm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/id" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currrec"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>